--- a/azure-pipelines-octubre21-eks.yml
+++ b/azure-pipelines-octubre21-eks.yml
@@ -17,3 +17,10 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: TerraformTaskV2@2
+  inputs:
+    provider: 'aws'
+    command: 'init'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/configuration/iaac/aws/kubernetes/'
+    backendAWSBucketName: 'terraform-backend-state-arcv-aforo255'
+    backendAWSKey: 'kubernetes-dev.tfstate'
