--- a/azure-pipelines-octubre21-eks.yml
+++ b/azure-pipelines-octubre21-eks.yml
@@ -21,6 +21,13 @@ steps:
   inputs:
     provider: 'aws'
     command: 'init'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/configuration/iaac/aws/kubernetes'
     backendServiceAWS: 'Aws-terraform'
     backendAWSBucketName: 'terraform-backend-state-arcv-aforo255'
     backendAWSKey: 'kubernetes-dev.tfstate'
+- task: TerraformTaskV2@2
+  inputs:
+    provider: 'aws'
+    command: 'apply'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/configuration/iaac/aws/kubernetes'
+    environmentServiceNameAWS: 'Aws-terraform'
